Retour au menu principal après l'affichage des projets

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+Catalogue/Catalogue/obj/Debug/Catalogue.csprojAssemblyReference.cache
+*.cache
